<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".base.BaseFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_base_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       >


        <TextView
            android:id="@+id/base_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/letschat"
            android:textSize="@dimen/_30sdp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/login_sign_up_buttons_container"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/base_title">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/go_to_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:text="@string/login"

                android:layout_margin="@dimen/_10sdp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/go_to_sign_up"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:text="@string/sign_up"

                android:layout_margin="@dimen/_10sdp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>