<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.letschat.auth.view_models.LoginViewModel" />

    </data>

<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"

    android:background="@drawable/gradient_background"
    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout


        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".auth.ui.LoginActivity"

        >

        <TextView
            android:id="@+id/login_screen_title"
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/login_email_container"

            style="@style/Titles"
            />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_email_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            app:layout_constraintTop_toBottomOf="@id/login_screen_title"
            app:layout_constraintBottom_toTopOf="@id/login_password_container"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:boxCornerRadiusTopStart="@dimen/_20sdp"
            app:boxCornerRadiusTopEnd="@dimen/_20sdp"
            app:boxCornerRadiusBottomStart="@dimen/_20sdp"
            app:boxCornerRadiusBottomEnd="@dimen/_20sdp"

            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"

            android:layout_marginStart="@dimen/_40sdp"
            android:layout_marginEnd="@dimen/_40sdp"
            android:layout_marginBottom="@dimen/_10sdp"

            android:shadowDy="5"
            android:shadowColor="@color/grey"
            android:shadowRadius="3"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_email_field"
                android:text="@={viewModel.email}"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:backgroundTint="@color/white"
                android:maxLines="1"

                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_password_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintTop_toBottomOf="@id/login_email_container"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:boxCornerRadiusTopStart="@dimen/_20sdp"
            app:boxCornerRadiusTopEnd="@dimen/_20sdp"
            app:boxCornerRadiusBottomStart="@dimen/_20sdp"
            app:boxCornerRadiusBottomEnd="@dimen/_20sdp"

            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"

            android:layout_marginStart="@dimen/_40sdp"
            android:layout_marginEnd="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_10sdp"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_password_field"
                android:text="@={viewModel.password}"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:backgroundTint="@color/white"
                android:maxLines="1"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_button"
            android:text="@string/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintTop_toBottomOf="@id/login_password_container"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:cornerRadius="@dimen/_20sdp"
            android:layout_margin="@dimen/_40sdp"

            android:textAllCaps="false"
            />


            <TextView
                android:id="@+id/forgot_password_text_view"
                android:text="@string/forgot_your_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                app:layout_constraintTop_toBottomOf="@id/login_button"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                android:textSize="@dimen/_12sdp"
                android:textColor="@color/white"
                android:layout_margin="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_25sdp"
                />


      </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >
            <TextView
                android:id="@+id/or_continue_with_text_view"
                android:text="@string/or_continue_with"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/google_button"
                app:layout_constraintTop_toTopOf="parent"

                android:layout_marginTop="@dimen/_60sdp"
                android:textColor="@color/white"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/google_button"
                android:text="@string/google"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:layout_constraintTop_toBottomOf="@id/or_continue_with_text_view"
                app:layout_constraintBottom_toTopOf="@id/already_have_an_account"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                app:cornerRadius="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_40sdp"
                android:layout_marginEnd="@dimen/_40sdp"

                android:backgroundTint="@color/red"
                android:textAllCaps="false"
                />

            <LinearLayout
                android:id="@+id/already_have_an_account"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/google_button"
                app:layout_constraintBottom_toBottomOf="parent"

                android:layout_marginTop="@dimen/_40sdp"


                >

                <TextView
                    android:text="@string/don_t_have_an_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp"

                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_5sdp" />

                <TextView
                    android:id="@+id/go_to_sign_up_screen"
                    android:text="@string/sign_up"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:textColor="#6B74CF"
                    android:textSize="@dimen/_14sdp"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginLeft="@dimen/_5sdp" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</ScrollView>
</layout>
