<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.example.letschat.auth.view_models.LoginViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_fragment_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_background">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"


            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout


                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:context=".auth.ui.LoginActivity"

                    >

                    <TextView
                        android:id="@+id/login_screen_title"
                        style="@style/Titles"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/login"
                        app:layout_constraintBottom_toTopOf="@id/login_email_container"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"

                        app:layout_constraintTop_toTopOf="parent" />


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/login_email_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"


                        android:layout_marginStart="@dimen/_40sdp"
                        android:layout_marginEnd="@dimen/_40sdp"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:shadowColor="@color/grey"

                        android:shadowDy="5"
                        android:shadowRadius="3"
                        app:boxCornerRadiusBottomEnd="@dimen/_20sdp"
                        app:boxCornerRadiusBottomStart="@dimen/_20sdp"

                        app:boxCornerRadiusTopEnd="@dimen/_20sdp"
                        app:boxCornerRadiusTopStart="@dimen/_20sdp"

                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="0dp"
                        app:layout_constraintBottom_toTopOf="@id/login_password_container"

                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/login_screen_title"

                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/login_email_field"
                            android:layout_width="match_parent"

                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/white"

                            android:maxLines="1"
                            android:text="@={viewModel.email}"

                            />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/login_password_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_marginStart="@dimen/_40sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_40sdp"

                        app:boxCornerRadiusBottomEnd="@dimen/_20sdp"
                        app:boxCornerRadiusBottomStart="@dimen/_20sdp"
                        app:boxCornerRadiusTopEnd="@dimen/_20sdp"
                        app:boxCornerRadiusTopStart="@dimen/_20sdp"

                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="0dp"

                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/login_email_container"

                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/login_password_field"
                            android:layout_width="match_parent"

                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/white"

                            android:maxLines="1"
                            android:text="@={viewModel.password}" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/login_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_40sdp"

                        android:text="@string/login"
                        android:textAllCaps="false"
                        app:cornerRadius="@dimen/_20sdp"

                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"

                        app:layout_constraintTop_toBottomOf="@id/login_password_container" />


                    <TextView
                        android:id="@+id/forgot_password_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_5sdp"

                        android:layout_marginBottom="@dimen/_25sdp"

                        android:text="@string/forgot_your_password"
                        android:textColor="@color/white"

                        android:textSize="@dimen/_12sdp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/login_button" />


                    <TextView
                        android:id="@+id/or_continue_with_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_60sdp"

                        android:text="@string/or_continue_with"
                        android:textColor="@color/white"
                        app:layout_constraintBottom_toTopOf="@id/google_button"
                        app:layout_constraintEnd_toEndOf="parent"

                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/forgot_password_text_view" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/google_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_40sdp"

                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_40sdp"
                        android:backgroundTint="@color/red"
                        android:text="@string/google"

                        android:textAllCaps="false"
                        app:cornerRadius="@dimen/_10sdp"
                        app:layout_constraintBottom_toTopOf="@id/already_have_an_account"
                        app:layout_constraintEnd_toEndOf="parent"

                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/or_continue_with_text_view" />

                    <LinearLayout
                        android:id="@+id/already_have_an_account"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_40sdp"

                        android:orientation="horizontal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"

                        app:layout_constraintTop_toBottomOf="@id/google_button"


                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_5sdp"

                            android:layout_marginRight="@dimen/_5sdp"
                            android:text="@string/don_t_have_an_account"

                            android:textColor="@color/white"
                            android:textSize="@dimen/_12sdp" />

                        <TextView
                            android:id="@+id/go_to_sign_up_screen"
                            android:layout_width="wrap_content"

                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_5sdp"

                            android:layout_marginLeft="@dimen/_5sdp"
                            android:text="@string/sign_up"
                            android:textColor="#6B74CF"
                            android:textSize="@dimen/_14sdp" />

                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
