<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.letschat.home.view_models.AddFriendViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"

        >

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/result_card_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/image_add_friend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_person_add_150"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_layout_friend_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:hint="@string/enter_friend_user_name"

                    android:shadowColor="@color/grey"
                    android:shadowDy="5"
                    android:shadowRadius="3"
                    app:boxCornerRadiusBottomEnd="@dimen/_20sdp"

                    app:boxCornerRadiusBottomStart="@dimen/_20sdp"
                    app:boxCornerRadiusTopEnd="@dimen/_20sdp"

                    app:boxCornerRadiusTopStart="@dimen/_20sdp"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/image_add_friend">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_text_friend_user_name"
                        android:layout_width="match_parent"

                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/white"

                        android:text="@={viewModel.userNameOfFriend}"

                        />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:id="@+id/linear_layout_ok_cancel_friend_request_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/input_layout_friend_user_name">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_cancel_friend_request"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/cancel"

                        app:cornerRadius="@dimen/_10sdp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_ok_friend_request"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/ok"

                        app:cornerRadius="@dimen/_10sdp" />

                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/result_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardView"

            app:cardCornerRadius="@dimen/_15sdp"
            android:layout_margin="@dimen/_10sdp"
            android:visibility="gone">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/image_of_potential_user"
                    android:src="@drawable/outline_account_circle_black_48"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    />

                <TextView
                    android:id="@+id/name_of_potential_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"

                    android:text="Samir Abd Rabbu"
                    android:textSize="@dimen/_14sdp"
                    />
            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>